adding microservice email and configuring gateway